# CraftConnect

./: README.md  index.html  package-lock.json  package.json  vite.config.js
Backend/: README.md  main.py  pyproject.toml
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.jsx  index.css
Frontend/src/assets/data/: navigation-links.js
Frontend/src/assets/icons/: socials.jsx
Frontend/src/components/CategoryData/: CategoryData.js  Morecategory.jsx
Frontend/src/components/authentication/: index.js
Frontend/src/components/authentication/Login/: Login.jsx
Frontend/src/components/authentication/Signup/: Signup.jsx
Frontend/src/components/firebase/: Firebaseconfig.js
Frontend/src/components/landing/footer/: index.jsx
Frontend/src/routes/: index.js
Frontend/src/routes/landing/: index.jsx
src/: App.jsx  index.css
src/assets/data/: navigation-links.js
src/components/: index.js
src/components/authentication/Signup/: index.jsx
src/components/landing/: index.js
src/components/landing/category/: category.module.css  index.jsx
src/components/landing/footer/: index.css  index.jsx
src/components/landing/hero/: index.css  index.jsx
src/components/landing/nav-bar/: index.css  index.jsx
src/components/landing/testimonial/: index.jsx  testy.module.css
src/components/landing/what-and-why/: index.css  index.jsx
src/components/landing/whatsCraft/: WhatsCraft.module.css  index.jsx
src/components/whatsCraft/: WhatsCraft.jsx
src/routes/error/: index.css  index.jsx
src/routes/landing/: index.css  index.jsx
(+8 files in other folders)
